--- a/index.html
+++ b/index.html
@@ -36,8 +36,8 @@
 </head>
 <body>
     <header>
-        <h1>Eu ensino Programação</h1>
-        <p>Sou Engenheiro de Computação e ensino pensamento computacional.</p>
+        <h1>Eu curso engenharia</h1>
+        <p>Sou estudante e estágiario na UTFPR-CP. Trabalho na área de TI principalmente na parte de REDES</p>
     </header>
     
     <h2>Meus projetos</h2>
