--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <body>
     <header>
         <h1>Eu curso engenharia</h1>
-        <p>Sou estudante e estágiario na UTFPR-CP. Trabalho na área de TI principalmente na parte de REDES</p>
+        <p>Sou estudante e estagiário na UTFPR-CP. Trabalho na área de TI, principalmente na parte de redes.</p>
     </header>
     
     <h2>Meus projetos</h2>
