--- a/index.html
+++ b/index.html
@@ -17,6 +17,16 @@
         h1 {
             color: #333;
         }
+        .foto-perfil {
+            border-radius: 50%;
+            width: 150px;
+            height: 150px;
+            object-fit: cover;
+            margin-bottom: 10px;
+        }
+        h2 {
+            margin: 10px 0;
+        }
         .projetos {
             display: flex;
             justify-content: center;
@@ -36,6 +46,9 @@
 </head>
 <body>
     <header>
+        <!-- Foto e nome -->
+        <img src="caminho-da-sua-imagem.jpg" alt="Foto de perfil" class="foto-perfil">
+        <h2>Seu Nome Aqui</h2>
         <h1>Eu curso engenharia</h1>
         <p>Sou estudante e estagiário na UTFPR-CP. Trabalho na área de TI, principalmente na parte de redes.</p>
     </header>
