--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
     <header>
         <!-- Foto e nome -->
         <img src="caminho-da-sua-imagem.jpg" alt="Foto de perfil" class="foto-perfil">
-        <h2>Seu Nome Aqui</h2>
-        <h1>Eu curso engenharia</h1>
+        <h1>Gabriel de Peder</h1>
+        <h2>Eu curso engenharia</h2>
         <p>Sou estudante e estagiário na UTFPR-CP. Trabalho na área de TI, principalmente na parte de redes.</p>
     </header>
     
