--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </div>
     
     <footer>
-        <p>Entre em contato: <a href="https://github.com/GabrieldPeder">GitHub</a></p>
+        <p><a href="https://github.com/GabrieldPeder">GitHub</a></p>
     </footer>
 </body>
 </html>
