--- a/index.html
+++ b/index.html
@@ -56,9 +56,9 @@
     <h2>Meus projetos</h2>
     <div class="projetos">
         <div class="projeto">
-            <h3>Minha Biblioteca</h3>
-            <p>Uma webpage personalizada com meus livros favoritos.</p>
-            <a href="#">Veja o projeto</a>
+            <h3>Minha primeira aula de Front</h3>
+            <p>Uma pagina da minha primeira aula de front.</p>
+            <a href="https://gabrieldpeder.github.io/Curriculo/">Veja o projeto</a>
         </div>
         <div class="projeto">
             <h3>Decidindo o Futuro</h3>
