--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
     <div class="projetos">
         <div class="projeto">
             <h3>Minha primeira aula de Front</h3>
-            <p>Uma pagina da minha primeira aula de front.</p>
-            <a href="https://gabrieldpeder.github.io/Curriculo/">Veja o projeto</a>
+    <p>Uma página da minha primeira aula de front.</p>
+    <a href="https://gabrieldpeder.github.io/Curriculo/">Veja o projeto</a>
         </div>
         <div class="projeto">
             <h3>Decidindo o Futuro</h3>
