--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
     <a href="https://gabrieldpeder.github.io/Curriculo/">Veja o projeto</a>
         </div>
         <div class="projeto">
-            <h3>Decidindo o Futuro</h3>
+            <h3>Decidindo o Futuro (fake news)</h3>
             <p>Uma jornada interativa sobre IA.</p>
             <a href="#">Veja o projeto</a>
         </div>
         <div class="projeto">
-            <h3>Explorando o Universo</h3>
+            <h3>Explorando o Universo (fake news)</h3>
             <p>Uma aventura interativa em astronomia.</p>
             <a href="#">Veja o projeto</a>
         </div>
     </div>
     
     <footer>
-        <p> <a href="https://github.com/GabrieldPeder">GitHub.</a></p>
+        <p> <a href="https://github.com/GabrieldPeder">GitHub</a></p>
     </footer>
 </body>
 </html>
