--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 <body>
     <header>
         
-        <img src="C:\Users\Administrador\Downloads\Foto.jpg" alt="Foto de perfil" class="foto-perfil">
+        <img src="Foto.jpg" alt="Foto de perfil" class="foto-perfil">
         <h1>Gabriel de Peder</h1>
         <h2>Eu curso engenharia</h2>
         <p>Sou estudante e estagiário na UTFPR-CP. Trabalho na área de TI, principalmente na parte de redes.</p>
